Fixed balanced spacing between link elements

--- a/styles.css
+++ b/styles.css
@@ -50,15 +50,18 @@ html {
 }
 
 header {
-  background-color: none;
+  background-color:  none;
 }
 
 header h1 {
   text-align: center;
+	font-family: 'Crushed';
+	color: #00BACB;
+  letter-spacing: .05em;
 }
 
-nav {
-
+nav a {
+	
 }
 
 nav ul li {
@@ -68,62 +71,73 @@ nav ul li {
 
 header a {
   text-decoration: none;
-  color: teal;
+}
+
+header a:visited {
+	color: #00BACB;
 }
 
 .links-to-pages {
-	display: block;
-	margin: 12.5vmin auto 0;
-	padding: 12.5vmin auto 0;
-	width: 90vw;
+	position: relative;
+	margin: 5vmin auto 0;
+	/*width: 90vw;*/
+	height: 65vmin;
+	align-content: center;
+	text-align: center;
+	background-color: #E3F2FD;
+	/*padding: 10vmin*/
 }
 
 .links-to-pages div {
-	width: 25vw;
-	height: 25vw;
+	width: 25vmin;
+	height: 25vmin;
 	position: relative;
-	margin: 12.5vmin 2vmin 12.5vmin;
+	margin: 20vmin 2.5vmin;
 	display: inline-block;
 	border-radius: 50%;
-}
-
-.about-box {
-	background-color: red;
 }
 
 .links-to-pages h2 {
 	position: absolute;
 	bottom: 0;
-	margin: 10vw auto;
-	font-size: 5vmin;
-	display: inline;
-	width: 25vw;
-	text-align: center;
+	margin: 10vmin auto;
+	font-size: 4vmin;
+	width: 25vmin;
+	color: white;
+	font-family: 'Montserrat'
+}
+
+.links-to-pages a {
+	text-decoration: none;
 	color: white;
 }
 
-.portfolio-box {
-	background-color: green;
+.about-box {
+	background-color: #BA274A;
+	margin: 1vmin;
 }
 
-.journal-box {
-	background-color: blue;
+.portfolio-box {
+	background-color: #686963;
+		margin: 1vmin;
+}
+
+.blog-box {
+	background-color: #00BACB;
+		margin: 1vmin;
 }
 
 footer {
 	/*display: inline-block;*/
-	height: 20vw;
+	height: 18vmin;
+	background-color: #686963;
+	margin: 0 auto;
+	position: relative;
+	text-align: center;
 }
 
-footer h4 {
+footer li {
 	display: inline-block;
-	width: 20vw;
-	margin: 7vw auto;
-}
-
-footer p {
-	display: inline-block;
-	width: 50vw;
-	font-size: 2vw;
-	margin: 7vw auto;
+	/*width: 20vmin;*/
+	margin: 5vmin 1vmin;
 }
